<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="listener"
            type="android.view.View.OnClickListener" />

        <variable
            name="viewModel"
            type="com.app.bygclite.viewmodels.AuthenticationViewModel" />

    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:fillViewport="true"
        tools:context=".ui.authenticationscreen.AuthenticationScreenActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <TextView
                android:id="@+id/text_skip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="23dp"
                android:layout_marginEnd="15dp"
                android:fontFamily="@font/roboto_medium"
                android:padding="10dp"
                android:text="@string/skip"
                android:textColor="@color/black"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/image_BYGC_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="120dp"
                android:src="@drawable/ic_bygc_logo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/app_name"
                />

            <EditText
                android:id="@+id/edit_text_mobile_number"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="22dp"
                android:layout_marginTop="53dp"
                android:layout_marginEnd="22dp"
                android:background="@drawable/bg_grey_with_black_border"
                android:fontFamily="@font/roboto_regular"
                android:hint="@string/enter_mobile_number"
                android:paddingStart="12dp"
                android:paddingTop="12dp"
                android:paddingEnd="12dp"
                android:paddingBottom="12dp"
                android:textColor="#414141"
                android:textColorHint="#414141"
                android:textSize="16sp"
                android:inputType="number"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/image_BYGC_logo" />

            <TextView
                android:id="@+id/text_mobile_error_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edit_text_mobile_number"
                android:layout_marginTop="5dp"
                android:textColor="@color/colorError"
                android:textSize="12sp"
                android:text="@string/invalid_mobile_number"
                android:layout_marginStart="22dp"
                android:layout_marginEnd="22dp"
                android:visibility="gone"
                />


            <TextView
                android:id="@+id/btn_submit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="22dp"
                android:layout_marginTop="15sp"
                android:layout_marginEnd="22dp"
                android:background="@drawable/bg_blue"
                android:fontFamily="@font/roboto_medium"
                android:paddingTop="11dp"
                android:paddingBottom="11dp"
                android:text="@string/submit"
                android:onClick="@{listener::onClick}"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="17sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_mobile_error_text" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="18dp"
                android:layout_marginEnd="24dp"
                android:fontFamily="@font/roboto_light"
                android:text="@string/text_terms_and_conditions"
                android:textAlignment="center"
                android:textColor="#797979"
                android:textSize="13sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_submit"
                app:layout_constraintVertical_bias="0.0" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</layout>