<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="listener"
            type="android.view.View.OnClickListener" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/profile_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_image"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginStart="14dp"
                android:layout_marginTop="14dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@drawable/men" />

            <TextView
                android:id="@+id/text_user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="14sp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/roboto_medium"
                android:textColor="@color/black"
                android:textSize="17sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/profile_image"
                tools:text="Jishnu P Dileep" />

            <View
                android:id="@+id/view_line"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="@android:color/darker_gray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_user_name" />

        </androidx.constraintlayout.widget.ConstraintLayout>


        <TextView
            android:id="@+id/text_add_post"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:layout_marginTop="19dp"
            android:layout_marginEnd="14dp"
            android:drawablePadding="8dp"
            android:fontFamily="@font/roboto_medium"
            android:onClick="@{listener::onClick}"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:text="@string/add_post"
            android:textColor="@color/black"
            app:drawableStartCompat="@drawable/ic_add_a_post"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_view" />

        <TextView
            android:id="@+id/text_user_account"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:layout_marginTop="14dp"
            android:layout_marginEnd="14dp"
            android:drawablePadding="8dp"
            android:fontFamily="@font/roboto_medium"
            android:onClick="@{listener::onClick}"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:text="@string/profile"
            android:textColor="@color/black"
            app:drawableStartCompat="@drawable/ic_account"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_add_post" />

        <TextView
            android:id="@+id/text_topics"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:layout_marginTop="14dp"
            android:layout_marginEnd="14dp"
            android:drawablePadding="8dp"
            android:fontFamily="@font/roboto_medium"
            android:onClick="@{listener::onClick}"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:text="@string/topics"
            android:textColor="@color/black"
            app:drawableStartCompat="@drawable/ic_topic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_user_account" />

        <TextView
            android:id="@+id/text_log_out"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:layout_marginTop="14dp"
            android:layout_marginEnd="14dp"
            android:drawablePadding="8dp"
            android:fontFamily="@font/roboto_medium"
            android:onClick="@{listener::onClick}"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:text="@string/logout"
            android:textColor="@color/black"
            app:drawableStartCompat="@drawable/ic_logout"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_topics"
            app:layout_constraintVertical_bias="0.0" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>